[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabrag-xai-imputer"
version = "0.0.2"
description = "Retrieval-Augmented Generation for Missing Data Imputation in Tabular Data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Arthur Dantas Mangussi", email = "mangussiarthur@gmail.com" },
]
keywords = [
    "imputation",
    "missing data",
    "RAG",
    "LLM",
    "tabular",
    "scikit-learn",
    "explainability",
    "XAI",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.0"]
claude = ["anthropic>=0.40"]
all = [
    "google-genai>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://arthurmangussi.github.io/TabRAG-XAI-Imputer/"
Repository = "https://github.com/ArthurMangussi/TabRAG-XAI-Imputer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
